// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table.md all off processor: table.md 1`] = `
| header abc123 | header 我a我1 |
| :-- | :-: |
| cell abc123 | cell 我a我1 |
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
| header abc123 | header 我 a 我 1 |
| :------------ | :------------: |
| cell abc123   |  cell 我 a 我 1  |

`;

exports[`table.md all off processor: table.md 2`] = `
| header abc123 | header 我a我1 |
| :-- | :-: |
| cell abc123 | cell 我a我1 |
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
| header abc123 | header 我 a 我 1 |
| :------------ | :------------: |
| cell abc123   |  cell 我 a 我 1  |

`;

exports[`table.md: table.md 1`] = `
| header abc123 | header 我a我1 |
| :-- | :-: |
| cell abc123 | cell 我a我1 |
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
| header abc123 | header 我 a 我 1 |
| :------------ | :------------: |
| cell abc123   |  cell 我 a 我 1  |

`;

exports[`table.md: table.md 2`] = `
| header abc123 | header 我a我1 |
| :-- | :-: |
| cell abc123 | cell 我a我1 |
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
| header abc123 | header 我a我1 |
| :------------ | :---------: |
| cell abc123   |  cell 我a我1  |

`;
